# -float-sticky-notes-C-

./: CMakeLists.txt  NotesWindow.cpp  NotesWindow.h  README.md  main.cpp
.github/workflows/: windows-build.yml
